# Flask-API

./: Dockerfile  Dockerfile~  Info.txt  Info_db.py  README.md  Registration.db  SQL_connect.py  app.py  details2.db  example.db  json_app.py  login.py  pyproject.toml  requirements  requirements.txt  student.db
T1_FLASK_WITH_POETRY/Flask_project/: Dockerfile  app.py  pyproject.toml  requirements.txt  test_app.py
T2_temerature_RESTAPi_task_openapi_spec/my_temp/: app.py  app_practice.py  pyproject.toml  requirements.txt  temp_store.db
T2_temerature_RESTAPi_task_openapi_spec/my_temp/tests/: test_my_temp.py
project/: pyproject.toml
templates/: index.html
