[tool.poetry]
name = "Flask_project"
version = "0.1.0"
description = "create a flask project and use flask-pydantic fro validation "
authors = ["Abhale <sonaliabhale8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-Pydantic = "^0.10.0"
pytest = "^7.1.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
